# im-chooser

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  requires  zanata.xml
.tx/: config
data/: .cvsignore  Makefile.am  none.in.in  xinput.sh  xinput.sh.in  xinput.sh.in.in  xinputinfo.sh.in
data/16x16/: Makefile.am
data/22x22/: Makefile.am
data/24x24/: Makefile.am
data/256x256/: Makefile.am
data/32x32/: Makefile.am
data/48x48/: Makefile.am
imsettings/: ChangeLog  Makefile.am
imsettings/backends/: Makefile.am
imsettings/backends/gconf/: Makefile.am  gconf-im-settings-daemon.service.in  introspection.xml  main.c
imsettings/backends/qt/: Makefile.am
imsettings/backends/xfce/: Makefile.am
imsettings/backends/xim/: Makefile.am  connection.c  connection.h  loopback.c  main.c  protocol.c  protocol.h  server.c  server.h  utils.c  utils.h
imsettings/imsettings/: Makefile.am  imsettings-info-private.h  imsettings-info.c  imsettings-info.h  imsettings-observer.c  imsettings-observer.h  imsettings-request.c  imsettings-request.h  imsettings-utils.c  imsettings-utils.h  imsettings.h  imsettings.xml  marshal.list
imsettings/src/: Makefile.am  factory.c  factory_info.c  im-info-daemon.service.in  im-settings-daemon.service.in  imsettings-manager.c  imsettings-manager.h
imsettings/utils/: Makefile.am  imsettings-info.c  imsettings-list.c  imsettings-reload.c  imsettings-restart.c  imsettings-start.c  imsettings-stop.c
libimchooseui/: Makefile.am  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-dbus-gnome.c  eggsmclient-dbus-kde.c  eggsmclient-dbus-xfce.c  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  imchoose.ui  imchooseui.c  imchooseui.h  imchooseuicellrendererlabel.c  imchooseuicellrendererlabel.h  marshal.list
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  es_MX.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+56 more)
src/: .cvsignore  Makefile.am  im-chooser-private.h  im-chooser-simple.c  im-chooser-simple.h  im-chooser.c  im-chooser.desktop.in.in  im-chooser.h  main.c  xfce4-im-chooser.desktop.in  xinput.c  xinput.h
src/app/: Makefile.am  im-chooser.1.xml  im-chooser.desktop.in.in  main.c
src/ccpanel/: Makefile.am  im-chooser-panel.desktop.in.in  imchoose-module.c  main.c
src/ui/: Makefile.am  eggdesktopfile.c  im-chooser-simple.c  im-chooser-ui.c  im-chooser-ui.h
src/xfce/: Makefile.am  main.c  xfce4-im-chooser.desktop.in.in
